<resources>
    <string name="app_name">MyNotes</string>
    <string name="note_title_hint">Enter a title for the note.</string>
    <string name="note_title_label">Title</string>
    <string name="note_details_label">Details</string>
    <string name="note_solved_label">Solved</string>
    <string name="note_date">Note date</string>
    <string name="note_title">Note title</string>
    <string name="note_important">Important</string>
    <string name="first_item_button">First Item</string>
    <string name="last_item_button">Last Item</string>
    <string name="date_picker_alert_header">Date of note:</string>
    <string name="add_contact_button">Add contact</string>
    <string name="send_report_button">Send report</string>

    <!-- Action Tab-->
    <string name="new_note">New Note</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d notes</string>
    <string name="delete_note">Delete Note</string>

    <!--Note report-->
    <string name="note_report">%1$s!
      The note was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="note_report_solved">The case is solved</string>
    <string name="note_report_unsolved">The case is not solved</string>
    <string name="note_report_no_contact">there is no contact.</string>
    <string name="note_report_contact">the contact is %s.</string>
    <string name="note_report_subject">Note Report</string>
    <string name="send_report">Send crime report via</string>
</resources>
