<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_title_label"/>

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_details_label"/>

    <Button
        android:id="@+id/note_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/note_important"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_important"/>

    <CheckBox
        android:id="@+id/note_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_solved_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_contact_button" />

        <Button
            android:id="@+id/send_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_report_button" />
    </LinearLayout>

</LinearLayout>